Added Notifications panel. Added missing translations

--- a/shopping-list/src/locales/da.json
+++ b/shopping-list/src/locales/da.json
@@ -22,5 +22,45 @@
   "yourLists": "Dine lister",
   "removeListsConfirmation": "Vil du slette de valgte lister?",
   "rename": "Omdøb",
-  "products": "Produkter"
+  "products": "Produkter",
+  "notificationsPanelTitle": "Notifikationspanel",
+  "invite": "Inviter",
+  "inviteFriend": "Inviter venner",
+  "shareListDescription": "For at dele listen <0>{{listName}}</0> med en ven, indtast deres e-mailadresse nedenfor.",
+  "noneUnit": "Ingen",
+  "pieceUnit": "Styk",
+  "kilogramUnit": "Kilogram",
+  "literUnit": "Liter",
+  "mililiterUnit": "Milliliter",
+  "gramUnit": "Gram",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "stk",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alkohol",
+  "medical": "Medicinsk",
+  "readyMeals": "Færdigretter",
+  "petSupplies": "Kæledyrsartikler",
+  "houseAndGarden": "Hus og have",
+  "babyProducts": "Babyprodukter",
+  "electronics": "Elektronik",
+  "hygiene": "Hygiejne",
+  "teaAndCoffee": "Te og kaffe",
+  "cannedAndPreserved": "Konserves og syltede varer",
+  "meatAndColdCuts": "Kød og pålæg",
+  "frozen": "Frosne varer",
+  "dairy": "Mejeriprodukter",
+  "fruitsAndVegetables": "Frugt og grøntsager",
+  "stationery": "Kontorartikler",
+  "bakery": "Bageri",
+  "spicesSausesOils": "Krydderier, saucer og olier",
+  "fishAndSeafood": "Fisk og skaldyr",
+  "dryGoodsAndPasta": "Tørvarer og pasta",
+  "sweets": "Slik",
+  "clothing": "Tøj",
+  "vege": "Vegetarisk",
+  "vaterAndDrinks": "Vand og drikkevarer",
+  "cleaningSupplies": "Rengøringsmidler",
+  "other": "Andet"
 }
