--- a/shopping-list/src/locales/de.json
+++ b/shopping-list/src/locales/de.json
@@ -22,5 +22,45 @@
   "yourLists": "Ihre Listen",
   "removeListsConfirmation": "Möchten Sie die ausgewählten Listen löschen?",
   "rename": "Umbenennen",
-  "products": "Produkte"
+  "products": "Produkte",
+  "notificationsPanelTitle": "Benachrichtigungspanel",
+  "invite": "Einladen",
+  "inviteFriend": "Freunde einladen",
+  "shareListDescription": "Um die Liste <0>{{listName}}</0> mit einem Freund zu teilen, geben Sie unten seine E-Mail-Adresse ein.",
+  "noneUnit": "Keine",
+  "pieceUnit": "Stück",
+  "kilogramUnit": "Kilogramm",
+  "literUnit": "Liter",
+  "mililiterUnit": "Milliliter",
+  "gramUnit": "Gramm",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "Stk",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alkohole",
+  "medical": "Medizinisch",
+  "readyMeals": "Fertiggerichte",
+  "petSupplies": "Haustierbedarf",
+  "houseAndGarden": "Haus und Garten",
+  "babyProducts": "Babyprodukte",
+  "electronics": "Elektronik",
+  "hygiene": "Hygiene",
+  "teaAndCoffee": "Tee und Kaffee",
+  "cannedAndPreserved": "Konserven und Eingemachtes",
+  "meatAndColdCuts": "Fleisch und Aufschnitt",
+  "frozen": "Gefroren",
+  "dairy": "Milchprodukte",
+  "fruitsAndVegetables": "Obst und Gemüse",
+  "stationery": "Schreibwaren",
+  "bakery": "Bäckerei",
+  "spicesSausesOils": "Gewürze, Soßen und Öle",
+  "fishAndSeafood": "Fisch und Meeresfrüchte",
+  "dryGoodsAndPasta": "Trockenwaren und Nudeln",
+  "sweets": "Süßigkeiten",
+  "clothing": "Kleidung",
+  "vege": "Vegetarisch",
+  "vaterAndDrinks": "Wasser und Getränke",
+  "cleaningSupplies": "Reinigungsmittel",
+  "other": "Andere"
 }
