--- a/shopping-list/src/locales/en.json
+++ b/shopping-list/src/locales/en.json
@@ -22,5 +22,45 @@
   "yourLists": "Your lists",
   "removeListsConfirmation": "Do you want to delete selected lists?",
   "rename": "Rename",
-  "products": "Products"
+  "products": "Products",
+  "notificationsPanelTitle": "Notifications",
+  "invite": "Invite",
+  "inviteFriend": "Invite friend",
+  "shareListDescription": "To share list <0>{{listName}}</0> with friend, enter their email address below.",
+  "noneUnit": "None",
+  "pieceUnit": "Piece",
+  "kilogramUnit": "Kilogram",
+  "literUnit": "Liter",
+  "mililiterUnit": "Milliliter",
+  "gramUnit": "Gram",
+  "alcohols": "Alcohols",
+  "medical": "Medical",
+  "readyMeals": "Ready meals",
+  "petSupplies": "Pet supplies",
+  "houseAndGarden": "House and garden",
+  "babyProducts": "Baby products",
+  "electronics": "Electronics",
+  "hygiene": "Hygiene",
+  "teaAndCoffee": "Tea and coffee",
+  "cannedAndPreserved": "Canned and preserved",
+  "meatAndColdCuts": "Meat and cold cuts",
+  "frozen": "Frozen",
+  "dairy": "Dairy",
+  "fruitsAndVegetables": "Fruits and vegetables",
+  "stationery": "Stationery",
+  "bakery": "Bakery",
+  "spicesSausesOils": "Spices, sauces and oils",
+  "fishAndSeafood": "Fish and seafood",
+  "dryGoodsAndPasta": "Dry goods and pasta",
+  "sweets": "Sweets",
+  "clothing": "Clothing",
+  "vege": "Vegetarian",
+  "vaterAndDrinks": "Water and drinks",
+  "cleaningSupplies": "Cleaning supplies",
+  "other": "Other",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "pcs",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g"
 }
