--- a/shopping-list/src/locales/es.json
+++ b/shopping-list/src/locales/es.json
@@ -22,5 +22,45 @@
   "yourLists": "Tus listas",
   "removeListsConfirmation": "¿Quieres eliminar las listas seleccionadas?",
   "rename": "Renombrar",
-  "products": "Productos"
+  "products": "Productos",
+  "notificationsPanelTitle": "Panel de notificaciones",
+  "invite": "Invitar",
+  "inviteFriend": "Invitar amigos",
+  "shareListDescription": "Para compartir la lista <0>{{listName}}</0> con un amigo, ingresa su correo electrónico a continuación.",
+  "noneUnit": "Ninguno",
+  "pieceUnit": "Pieza",
+  "kilogramUnit": "Kilogramo",
+  "literUnit": "Litro",
+  "mililiterUnit": "Mililitro",
+  "gramUnit": "Gramo",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "uds",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alcoholes",
+  "medical": "Médico",
+  "readyMeals": "Comidas preparadas",
+  "petSupplies": "Suministros para mascotas",
+  "houseAndGarden": "Casa y jardín",
+  "babyProducts": "Productos para bebés",
+  "electronics": "Electrónica",
+  "hygiene": "Higiene",
+  "teaAndCoffee": "Té y café",
+  "cannedAndPreserved": "Enlatados y conservas",
+  "meatAndColdCuts": "Carne y embutidos",
+  "frozen": "Congelados",
+  "dairy": "Lácteos",
+  "fruitsAndVegetables": "Frutas y verduras",
+  "stationery": "Papelería",
+  "bakery": "Panadería",
+  "spicesSausesOils": "Especias, salsas y aceites",
+  "fishAndSeafood": "Pescado y mariscos",
+  "dryGoodsAndPasta": "Productos secos y pasta",
+  "sweets": "Dulces",
+  "clothing": "Ropa",
+  "vege": "Vegetariano",
+  "vaterAndDrinks": "Agua y bebidas",
+  "cleaningSupplies": "Productos de limpieza",
+  "other": "Otro"
 }
