--- a/shopping-list/src/locales/fi.json
+++ b/shopping-list/src/locales/fi.json
@@ -22,5 +22,45 @@
   "yourLists": "Sinun listasi",
   "removeListsConfirmation": "Haluatko poistaa valitut listat?",
   "rename": "Nimeä uudelleen",
-  "products": "Tuotteet"
+  "products": "Tuotteet",
+  "notificationsPanelTitle": "Ilmoituspaneeli",
+  "invite": "Kutsu",
+  "inviteFriend": "Kutsu ystäviä",
+  "shareListDescription": "Jaa lista <0>{{listName}}</0> ystävälle kirjoittamalla hänen sähköpostiosoitteensa alle.",
+  "noneUnit": "Ei mitään",
+  "pieceUnit": "Kappale",
+  "kilogramUnit": "Kilogramma",
+  "literUnit": "Litra",
+  "mililiterUnit": "Millilitra",
+  "gramUnit": "Gramma",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "kpl",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alkoholit",
+  "medical": "Lääkkeet",
+  "readyMeals": "Valmisateriat",
+  "petSupplies": "Lemmikkitarvikkeet",
+  "houseAndGarden": "Koti ja puutarha",
+  "babyProducts": "Vauvatuotteet",
+  "electronics": "Elektroniikka",
+  "hygiene": "Hygienia",
+  "teaAndCoffee": "Tee ja kahvi",
+  "cannedAndPreserved": "Säilykkeet",
+  "meatAndColdCuts": "Liha ja leikkeleet",
+  "frozen": "Pakasteet",
+  "dairy": "Maitotuotteet",
+  "fruitsAndVegetables": "Hedelmät ja vihannekset",
+  "stationery": "Toimistotarvikkeet",
+  "bakery": "Leipomo",
+  "spicesSausesOils": "Mausteet, kastikkeet ja öljyt",
+  "fishAndSeafood": "Kala ja äyriäiset",
+  "dryGoodsAndPasta": "Kuivatavarat ja pasta",
+  "sweets": "Makeiset",
+  "clothing": "Vaatteet",
+  "vege": "Kasvisruoka",
+  "vaterAndDrinks": "Vesi ja juomat",
+  "cleaningSupplies": "Siivoustarvikkeet",
+  "other": "Muu"
 }
