--- a/shopping-list/src/locales/fr.json
+++ b/shopping-list/src/locales/fr.json
@@ -22,5 +22,45 @@
   "yourLists": "Vos listes",
   "removeListsConfirmation": "Voulez-vous supprimer les listes sélectionnées?",
   "rename": "Renommer",
-  "products": "Produits"
+  "products": "Produits",
+  "notificationsPanelTitle": "Panneau de notifications",
+  "invite": "Inviter",
+  "inviteFriend": "Inviter des amis",
+  "shareListDescription": "Pour partager la liste <0>{{listName}}</0> avec un ami, entrez son adresse e-mail ci-dessous.",
+  "noneUnit": "Aucun",
+  "pieceUnit": "Pièce",
+  "kilogramUnit": "Kilogramme",
+  "literUnit": "Litre",
+  "mililiterUnit": "Millilitre",
+  "gramUnit": "Gramme",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "pcs",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alcools",
+  "medical": "Médical",
+  "readyMeals": "Plats préparés",
+  "petSupplies": "Fournitures pour animaux",
+  "houseAndGarden": "Maison et jardin",
+  "babyProducts": "Produits pour bébés",
+  "electronics": "Électronique",
+  "hygiene": "Hygiène",
+  "teaAndCoffee": "Thé et café",
+  "cannedAndPreserved": "Conserves et marinades",
+  "meatAndColdCuts": "Viande et charcuterie",
+  "frozen": "Surgelés",
+  "dairy": "Produits laitiers",
+  "fruitsAndVegetables": "Fruits et légumes",
+  "stationery": "Papeterie",
+  "bakery": "Boulangerie",
+  "spicesSausesOils": "Épices, sauces et huiles",
+  "fishAndSeafood": "Poissons et fruits de mer",
+  "dryGoodsAndPasta": "Produits secs et pâtes",
+  "sweets": "Confiseries",
+  "clothing": "Vêtements",
+  "vege": "Végétarien",
+  "vaterAndDrinks": "Eau et boissons",
+  "cleaningSupplies": "Produits de nettoyage",
+  "other": "Autre"
 }
