--- a/shopping-list/src/locales/it.json
+++ b/shopping-list/src/locales/it.json
@@ -22,5 +22,45 @@
   "yourLists": "Le tue liste",
   "removeListsConfirmation": "Vuoi eliminare le liste selezionate?",
   "rename": "Rinomina",
-  "products": "Prodotti"
+  "products": "Prodotti",
+  "notificationsPanelTitle": "Pannello notifiche",
+  "invite": "Invita",
+  "inviteFriend": "Invita amici",
+  "shareListDescription": "Per condividere la lista <0>{{listName}}</0> con un amico, inserisci il suo indirizzo email qui sotto.",
+  "noneUnit": "Nessuno",
+  "pieceUnit": "Pezzo",
+  "kilogramUnit": "Chilogrammo",
+  "literUnit": "Litro",
+  "mililiterUnit": "Millilitro",
+  "gramUnit": "Grammo",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "pz",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alcolici",
+  "medical": "Medico",
+  "readyMeals": "Piatti pronti",
+  "petSupplies": "Articoli per animali",
+  "houseAndGarden": "Casa e giardino",
+  "babyProducts": "Prodotti per bambini",
+  "electronics": "Elettronica",
+  "hygiene": "Igiene",
+  "teaAndCoffee": "Tè e caffè",
+  "cannedAndPreserved": "Conserve e sottaceti",
+  "meatAndColdCuts": "Carne e salumi",
+  "frozen": "Surgelati",
+  "dairy": "Latticini",
+  "fruitsAndVegetables": "Frutta e verdura",
+  "stationery": "Cartoleria",
+  "bakery": "Panetteria",
+  "spicesSausesOils": "Spezie, salse e oli",
+  "fishAndSeafood": "Pesce e frutti di mare",
+  "dryGoodsAndPasta": "Prodotti secchi e pasta",
+  "sweets": "Dolci",
+  "clothing": "Abbigliamento",
+  "vege": "Vegetariano",
+  "vaterAndDrinks": "Acqua e bevande",
+  "cleaningSupplies": "Prodotti per la pulizia",
+  "other": "Altro"
 }
