--- a/shopping-list/src/locales/ja.json
+++ b/shopping-list/src/locales/ja.json
@@ -22,5 +22,45 @@
   "yourLists": "あなたのリスト",
   "removeListsConfirmation": "選択したリストを削除しますか？",
   "rename": "名前を変更",
-  "products": "製品"
+  "products": "製品",
+  "notificationsPanelTitle": "通知パネル",
+  "invite": "招待",
+  "inviteFriend": "友達を招待",
+  "shareListDescription": "リスト <0>{{listName}}</0> を友達と共有するには、以下にメールアドレスを入力してください。",
+  "noneUnit": "なし",
+  "pieceUnit": "個",
+  "kilogramUnit": "キログラム",
+  "literUnit": "リットル",
+  "mililiterUnit": "ミリリットル",
+  "gramUnit": "グラム",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "個",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "アルコール",
+  "medical": "医療",
+  "readyMeals": "即席食品",
+  "petSupplies": "ペット用品",
+  "houseAndGarden": "家と庭",
+  "babyProducts": "ベビー用品",
+  "electronics": "電子機器",
+  "hygiene": "衛生",
+  "teaAndCoffee": "お茶とコーヒー",
+  "cannedAndPreserved": "缶詰と保存食品",
+  "meatAndColdCuts": "肉と冷肉",
+  "frozen": "冷凍食品",
+  "dairy": "乳製品",
+  "fruitsAndVegetables": "果物と野菜",
+  "stationery": "文房具",
+  "bakery": "ベーカリー",
+  "spicesSausesOils": "スパイス、ソース、オイル",
+  "fishAndSeafood": "魚とシーフード",
+  "dryGoodsAndPasta": "乾物とパスタ",
+  "sweets": "お菓子",
+  "clothing": "衣類",
+  "vege": "ベジタリアン",
+  "vaterAndDrinks": "水と飲み物",
+  "cleaningSupplies": "清掃用品",
+  "other": "その他"
 }
