--- a/shopping-list/src/locales/ko.json
+++ b/shopping-list/src/locales/ko.json
@@ -22,5 +22,45 @@
   "yourLists": "귀하의 목록",
   "removeListsConfirmation": "선택한 목록을 삭제하시겠습니까?",
   "rename": "이름 변경",
-  "products": "제품"
+  "products": "제품",
+  "notificationsPanelTitle": "알림 패널",
+  "invite": "초대",
+  "inviteFriend": "친구 초대",
+  "shareListDescription": "목록 <0>{{listName}}</0>을(를) 친구와 공유하려면 아래에 이메일 주소를 입력하세요.",
+  "noneUnit": "없음",
+  "pieceUnit": "개",
+  "kilogramUnit": "킬로그램",
+  "literUnit": "리터",
+  "mililiterUnit": "밀리리터",
+  "gramUnit": "그램",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "개",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "주류",
+  "medical": "의료",
+  "readyMeals": "즉석식품",
+  "petSupplies": "애완용품",
+  "houseAndGarden": "집과 정원",
+  "babyProducts": "유아용품",
+  "electronics": "전자제품",
+  "hygiene": "위생",
+  "teaAndCoffee": "차와 커피",
+  "cannedAndPreserved": "통조림 및 저장식품",
+  "meatAndColdCuts": "육류 및 냉장육",
+  "frozen": "냉동식품",
+  "dairy": "유제품",
+  "fruitsAndVegetables": "과일과 채소",
+  "stationery": "문구류",
+  "bakery": "베이커리",
+  "spicesSausesOils": "향신료, 소스 및 오일",
+  "fishAndSeafood": "생선 및 해산물",
+  "dryGoodsAndPasta": "건조식품 및 파스타",
+  "sweets": "과자",
+  "clothing": "의류",
+  "vege": "채식",
+  "vaterAndDrinks": "물과 음료",
+  "cleaningSupplies": "청소용품",
+  "other": "기타"
 }
