--- a/shopping-list/src/locales/nl.json
+++ b/shopping-list/src/locales/nl.json
@@ -22,5 +22,45 @@
   "yourLists": "Uw lijsten",
   "removeListsConfirmation": "Wilt u de geselecteerde lijsten verwijderen?",
   "rename": "Hernoemen",
-  "products": "Producten"
+  "products": "Producten",
+  "notificationsPanelTitle": "Meldingen",
+  "invite": "Uitnodigen",
+  "inviteFriend": "Vrienden uitnodigen",
+  "shareListDescription": "Om de lijst <0>{{listName}}</0> te delen met een vriend, voer hieronder hun e-mailadres in.",
+  "noneUnit": "Geen",
+  "pieceUnit": "Stuk",
+  "kilogramUnit": "Kilogram",
+  "literUnit": "Liter",
+  "mililiterUnit": "Milliliter",
+  "gramUnit": "Gram",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "st",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alcohol",
+  "medical": "Medisch",
+  "readyMeals": "Kant-en-klaarmaaltijden",
+  "petSupplies": "Huisdierbenodigdheden",
+  "houseAndGarden": "Huis en tuin",
+  "babyProducts": "Babyproducten",
+  "electronics": "Elektronica",
+  "hygiene": "Hygiëne",
+  "teaAndCoffee": "Thee en koffie",
+  "cannedAndPreserved": "Ingeblikt en geconserveerd",
+  "meatAndColdCuts": "Vlees en vleeswaren",
+  "frozen": "Diepvries",
+  "dairy": "Zuivel",
+  "fruitsAndVegetables": "Fruit en groenten",
+  "stationery": "Kantoorartikelen",
+  "bakery": "Bakkerij",
+  "spicesSausesOils": "Kruiden, sauzen en oliën",
+  "fishAndSeafood": "Vis en zeevruchten",
+  "dryGoodsAndPasta": "Droge goederen en pasta",
+  "sweets": "Snoep",
+  "clothing": "Kleding",
+  "vege": "Vegetarisch",
+  "vaterAndDrinks": "Water en dranken",
+  "cleaningSupplies": "Schoonmaakmiddelen",
+  "other": "Overig"
 }
