--- a/shopping-list/src/locales/no.json
+++ b/shopping-list/src/locales/no.json
@@ -22,5 +22,45 @@
   "yourLists": "Dine lister",
   "removeListsConfirmation": "Vil du slette de valgte listene?",
   "rename": "Gi nytt navn",
-  "products": "Produkter"
+  "products": "Produkter",
+  "notificationsPanelTitle": "Varslingspanel",
+  "invite": "Inviter",
+  "inviteFriend": "Inviter venner",
+  "shareListDescription": "For å dele listen <0>{{listName}}</0> med en venn, skriv inn e-postadressen deres nedenfor.",
+  "noneUnit": "Ingen",
+  "pieceUnit": "Stykke",
+  "kilogramUnit": "Kilogram",
+  "literUnit": "Liter",
+  "mililiterUnit": "Milliliter",
+  "gramUnit": "Gram",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "stk",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alkohol",
+  "medical": "Medisinsk",
+  "readyMeals": "Ferdigretter",
+  "petSupplies": "Dyreartikler",
+  "houseAndGarden": "Hus og hage",
+  "babyProducts": "Babyprodukter",
+  "electronics": "Elektronikk",
+  "hygiene": "Hygiene",
+  "teaAndCoffee": "Te og kaffe",
+  "cannedAndPreserved": "Hermetikk og konserver",
+  "meatAndColdCuts": "Kjøtt og pålegg",
+  "frozen": "Frossen",
+  "dairy": "Meieri",
+  "fruitsAndVegetables": "Frukt og grønnsaker",
+  "stationery": "Kontorrekvisita",
+  "bakery": "Bakeri",
+  "spicesSausesOils": "Krydder, sauser og oljer",
+  "fishAndSeafood": "Fisk og sjømat",
+  "dryGoodsAndPasta": "Tørrvarer og pasta",
+  "sweets": "Søtsaker",
+  "clothing": "Klær",
+  "vege": "Vegetarisk",
+  "vaterAndDrinks": "Vann og drikke",
+  "cleaningSupplies": "Rengjøringsmidler",
+  "other": "Annet"
 }
