--- a/shopping-list/src/locales/pl.json
+++ b/shopping-list/src/locales/pl.json
@@ -22,5 +22,45 @@
   "yourLists": "Twoje listy",
   "removeListsConfirmation": "Czy chcesz usunąć wybrane listy?",
   "rename": "Zmień nazwę",
-  "products": "Produkty"
+  "products": "Produkty",
+  "notificationsPanelTitle": "Panel powiadomień",
+  "invite": "Zaproś",
+  "inviteFriend": "Zaproś znajomych",
+  "shareListDescription": "Aby udostępnić listę <0>{{listName}}</0> znajomemu, wprowadź jego adres e-mail poniżej.",
+  "noneUnit": "Brak",
+  "pieceUnit": "Sztuka",
+  "kilogramUnit": "Kilogram",
+  "literUnit": "Litr",
+  "mililiterUnit": "Mililitr",
+  "gramUnit": "Gram",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "szt",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Alkohole",
+  "medical": "Medyczne",
+  "readyMeals": "Gotowe posiłki",
+  "petSupplies": "Artykuły dla zwierząt",
+  "houseAndGarden": "Dom i ogród",
+  "babyProducts": "Produkty dla dzieci",
+  "electronics": "Elektronika",
+  "hygiene": "Higiena",
+  "teaAndCoffee": "Herbata i kawa",
+  "cannedAndPreserved": "Konserwy i przetwory",
+  "meatAndColdCuts": "Mięso i wędliny",
+  "frozen": "Mrożonki",
+  "dairy": "Nabiał",
+  "fruitsAndVegetables": "Owoce i warzywa",
+  "stationery": "Artykuły papiernicze",
+  "bakery": "Piekarnia",
+  "spicesSausesOils": "Przyprawy, sosy i oleje",
+  "fishAndSeafood": "Ryby i owoce morza",
+  "dryGoodsAndPasta": "Produkty suche i makarony",
+  "sweets": "Słodycze",
+  "clothing": "Odzież",
+  "vege": "Wegetariańskie",
+  "vaterAndDrinks": "Woda i napoje",
+  "cleaningSupplies": "Środki czystości",
+  "other": "Inne"
 }
