--- a/shopping-list/src/locales/pt.json
+++ b/shopping-list/src/locales/pt.json
@@ -22,5 +22,45 @@
   "yourLists": "Suas listas",
   "removeListsConfirmation": "Você quer deletar as listas selecionadas?",
   "rename": "Renomear",
-  "products": "Produtos"
+  "products": "Produtos",
+  "notificationsPanelTitle": "Painel de notificações",
+  "invite": "Convidar",
+  "inviteFriend": "Convidar amigos",
+  "shareListDescription": "Para compartilhar a lista <0>{{listName}}</0> com um amigo, insira o endereço de e-mail dele abaixo.",
+  "noneUnit": "Nenhum",
+  "pieceUnit": "Peça",
+  "kilogramUnit": "Quilograma",
+  "literUnit": "Litro",
+  "mililiterUnit": "Mililitro",
+  "gramUnit": "Grama",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "un",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g",
+  "alcohols": "Bebidas alcoólicas",
+  "medical": "Medicamentos",
+  "readyMeals": "Refeições prontas",
+  "petSupplies": "Suprimentos para animais",
+  "houseAndGarden": "Casa e jardim",
+  "babyProducts": "Produtos para bebês",
+  "electronics": "Eletrônicos",
+  "hygiene": "Higiene",
+  "teaAndCoffee": "Chá e café",
+  "cannedAndPreserved": "Enlatados e conservas",
+  "meatAndColdCuts": "Carnes e frios",
+  "frozen": "Congelados",
+  "dairy": "Laticínios",
+  "fruitsAndVegetables": "Frutas e vegetais",
+  "stationery": "Papelaria",
+  "bakery": "Padaria",
+  "spicesSausesOils": "Especiarias, molhos e óleos",
+  "fishAndSeafood": "Peixes e frutos do mar",
+  "dryGoodsAndPasta": "Produtos secos e massas",
+  "sweets": "Doces",
+  "clothing": "Roupas",
+  "vege": "Vegetariano",
+  "vaterAndDrinks": "Água e bebidas",
+  "cleaningSupplies": "Produtos de limpeza",
+  "other": "Outros"
 }
