--- a/shopping-list/src/locales/ru.json
+++ b/shopping-list/src/locales/ru.json
@@ -22,5 +22,45 @@
   "yourLists": "Ваши списки",
   "removeListsConfirmation": "Вы хотите удалить выбранные списки?",
   "rename": "Переименовать",
-  "products": "Продукты"
+  "products": "Продукты",
+  "notificationsPanelTitle": "Панель уведомлений",
+  "invite": "Пригласить",
+  "inviteFriend": "Пригласить друга",
+  "shareListDescription": "Чтобы поделиться списком <0>{{listName}}</0> с другом, введите его адрес электронной почты ниже.",
+  "noneUnit": "Нет",
+  "pieceUnit": "Штука",
+  "kilogramUnit": "Килограмм",
+  "literUnit": "Литр",
+  "mililiterUnit": "Миллилитр",
+  "gramUnit": "Грамм",
+  "alcohols": "Алкоголь",
+  "medical": "Медицинское",
+  "readyMeals": "Готовые блюда",
+  "petSupplies": "Товары для животных",
+  "houseAndGarden": "Дом и сад",
+  "babyProducts": "Товары для детей",
+  "electronics": "Электроника",
+  "hygiene": "Гигиена",
+  "teaAndCoffee": "Чай и кофе",
+  "cannedAndPreserved": "Консервы и соленья",
+  "meatAndColdCuts": "Мясо и нарезка",
+  "frozen": "Замороженные продукты",
+  "dairy": "Молочные продукты",
+  "fruitsAndVegetables": "Фрукты и овощи",
+  "stationery": "Канцелярия",
+  "bakery": "Выпечка",
+  "spicesSausesOils": "Специи, соусы и масла",
+  "fishAndSeafood": "Рыба и морепродукты",
+  "dryGoodsAndPasta": "Бакалея и макароны",
+  "sweets": "Сладости",
+  "clothing": "Одежда",
+  "vege": "Вегетарианское",
+  "vaterAndDrinks": "Вода и напитки",
+  "cleaningSupplies": "Чистящие средства",
+  "other": "Другое",
+  "kgShortUnit": "кг",
+  "lShortUnit": "л",
+  "pcsShortUnit": "шт",
+  "mlShortUnit": "мл",
+  "gShortUnit": "г"
 }
