--- a/shopping-list/src/locales/sv.json
+++ b/shopping-list/src/locales/sv.json
@@ -22,5 +22,45 @@
   "yourLists": "Dina listor",
   "removeListsConfirmation": "Vill du radera de valda listorna?",
   "rename": "Byt namn",
-  "products": "Produkter"
+  "products": "Produkter",
+  "notificationsPanelTitle": "Meddelanden",
+  "invite": "Bjud in",
+  "inviteFriend": "Bjud in vän",
+  "shareListDescription": "För att dela listan <0>{{listName}}</0> med en vän, ange deras e-postadress nedan.",
+  "noneUnit": "Ingen",
+  "pieceUnit": "Styck",
+  "kilogramUnit": "Kilogram",
+  "literUnit": "Liter",
+  "mililiterUnit": "Milliliter",
+  "gramUnit": "Gram",
+  "alcohols": "Alkoholer",
+  "medical": "Medicinskt",
+  "readyMeals": "Färdigrätter",
+  "petSupplies": "Husdjursartiklar",
+  "houseAndGarden": "Hus och trädgård",
+  "babyProducts": "Babyprodukter",
+  "electronics": "Elektronik",
+  "hygiene": "Hygien",
+  "teaAndCoffee": "Te och kaffe",
+  "cannedAndPreserved": "Konserver och inläggningar",
+  "meatAndColdCuts": "Kött och chark",
+  "frozen": "Fryst",
+  "dairy": "Mejeri",
+  "fruitsAndVegetables": "Frukt och grönsaker",
+  "stationery": "Kontorsmaterial",
+  "bakery": "Bageri",
+  "spicesSausesOils": "Kryddor, såser och oljor",
+  "fishAndSeafood": "Fisk och skaldjur",
+  "dryGoodsAndPasta": "Torrvaror och pasta",
+  "sweets": "Godis",
+  "clothing": "Kläder",
+  "vege": "Vegetariskt",
+  "vaterAndDrinks": "Vatten och drycker",
+  "cleaningSupplies": "Rengöringsmedel",
+  "other": "Annat",
+  "kgShortUnit": "kg",
+  "lShortUnit": "l",
+  "pcsShortUnit": "st",
+  "mlShortUnit": "ml",
+  "gShortUnit": "g"
 }
