--- a/shopping-list/src/locales/zh.json
+++ b/shopping-list/src/locales/zh.json
@@ -22,5 +22,45 @@
   "yourLists": "您的列表",
   "removeListsConfirmation": "您要删除选定的列表吗？",
   "rename": "重命名",
-  "products": "产品"
+  "products": "产品",
+  "notificationsPanelTitle": "通知面板",
+  "invite": "邀请",
+  "inviteFriend": "邀请朋友",
+  "shareListDescription": "要分享列表 <0>{{listName}}</0> 给朋友，请在下面输入他们的电子邮件地址。",
+  "noneUnit": "无",
+  "pieceUnit": "件",
+  "kilogramUnit": "千克",
+  "literUnit": "升",
+  "mililiterUnit": "毫升",
+  "gramUnit": "克",
+  "alcohols": "酒类",
+  "medical": "医疗",
+  "readyMeals": "即食餐",
+  "petSupplies": "宠物用品",
+  "houseAndGarden": "家居和花园",
+  "babyProducts": "婴儿用品",
+  "electronics": "电子产品",
+  "hygiene": "卫生",
+  "teaAndCoffee": "茶和咖啡",
+  "cannedAndPreserved": "罐头和腌制品",
+  "meatAndColdCuts": "肉类和冷切",
+  "frozen": "冷冻食品",
+  "dairy": "乳制品",
+  "fruitsAndVegetables": "水果和蔬菜",
+  "stationery": "文具",
+  "bakery": "烘焙食品",
+  "spicesSausesOils": "香料、酱料和油",
+  "fishAndSeafood": "鱼类和海鲜",
+  "dryGoodsAndPasta": "干货和意大利面",
+  "sweets": "甜食",
+  "clothing": "服装",
+  "vege": "素食",
+  "vaterAndDrinks": "水和饮料",
+  "cleaningSupplies": "清洁用品",
+  "other": "其他",
+  "kgShortUnit": "千克",
+  "lShortUnit": "升",
+  "pcsShortUnit": "件",
+  "mlShortUnit": "毫升",
+  "gShortUnit": "克"
 }
