Fixed more translations

--- a/shopping-list/src/locales/da.json
+++ b/shopping-list/src/locales/da.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Styk",
   "kilogramUnit": "Kilogram",
   "literUnit": "Liter",
-  "mililiterUnit": "Milliliter",
+  "milliliterUnit": "Milliliter",
   "gramUnit": "Gram",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "stk",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Sorter efter navn",
+  "sortByDateAdded": "Sorter efter tilføjelsesdato",
+  "sortByCategory": "Sorter efter kategori",
+  "ascending": "Stigende",
+  "descending": "Faldende",
   "alcohols": "Alkohol",
   "medical": "Medicinsk",
   "readyMeals": "Færdigretter",
