--- a/shopping-list/src/locales/de.json
+++ b/shopping-list/src/locales/de.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Stück",
   "kilogramUnit": "Kilogramm",
   "literUnit": "Liter",
-  "mililiterUnit": "Milliliter",
+  "milliliterUnit": "Milliliter",
   "gramUnit": "Gramm",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "Stk",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Nach Name sortieren",
+  "sortByDateAdded": "Nach Hinzufügedatum sortieren",
+  "sortByCategory": "Nach Kategorie sortieren",
+  "ascending": "Aufsteigend",
+  "descending": "Absteigend",
   "alcohols": "Alkohole",
   "medical": "Medizinisch",
   "readyMeals": "Fertiggerichte",
