--- a/shopping-list/src/locales/es.json
+++ b/shopping-list/src/locales/es.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Pieza",
   "kilogramUnit": "Kilogramo",
   "literUnit": "Litro",
-  "mililiterUnit": "Mililitro",
+  "milliliterUnit": "Mililitro",
   "gramUnit": "Gramo",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "uds",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Ordenar por nombre",
+  "sortByDateAdded": "Ordenar por fecha de adición",
+  "sortByCategory": "Ordenar por categoría",
+  "ascending": "Ascendente",
+  "descending": "Descendente",
   "alcohols": "Alcoholes",
   "medical": "Médico",
   "readyMeals": "Comidas preparadas",
