--- a/shopping-list/src/locales/fi.json
+++ b/shopping-list/src/locales/fi.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Kappale",
   "kilogramUnit": "Kilogramma",
   "literUnit": "Litra",
-  "mililiterUnit": "Millilitra",
+  "milliliterUnit": "Millilitra",
   "gramUnit": "Gramma",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "kpl",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Lajittele nimen mukaan",
+  "sortByDateAdded": "Lajittele lisäyspäivän mukaan",
+  "sortByCategory": "Lajittele kategorian mukaan",
+  "ascending": "Nouseva",
+  "descending": "Laskeva",
   "alcohols": "Alkoholit",
   "medical": "Lääkkeet",
   "readyMeals": "Valmisateriat",
