--- a/shopping-list/src/locales/fr.json
+++ b/shopping-list/src/locales/fr.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Pièce",
   "kilogramUnit": "Kilogramme",
   "literUnit": "Litre",
-  "mililiterUnit": "Millilitre",
+  "milliliterUnit": "Millilitre",
   "gramUnit": "Gramme",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "pcs",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Trier par nom",
+  "sortByDateAdded": "Trier par date d'ajout",
+  "sortByCategory": "Trier par catégorie",
+  "ascending": "Croissant",
+  "descending": "Décroissant",
   "alcohols": "Alcools",
   "medical": "Médical",
   "readyMeals": "Plats préparés",
