--- a/shopping-list/src/locales/it.json
+++ b/shopping-list/src/locales/it.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Pezzo",
   "kilogramUnit": "Chilogrammo",
   "literUnit": "Litro",
-  "mililiterUnit": "Millilitro",
+  "milliliterUnit": "Millilitro",
   "gramUnit": "Grammo",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "pz",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Ordina per nome",
+  "sortByDateAdded": "Ordina per data di aggiunta",
+  "sortByCategory": "Ordina per categoria",
+  "ascending": "Ascendente",
+  "descending": "Discendente",
   "alcohols": "Alcolici",
   "medical": "Medico",
   "readyMeals": "Piatti pronti",
