--- a/shopping-list/src/locales/ja.json
+++ b/shopping-list/src/locales/ja.json
@@ -31,13 +31,18 @@
   "pieceUnit": "個",
   "kilogramUnit": "キログラム",
   "literUnit": "リットル",
-  "mililiterUnit": "ミリリットル",
+  "milliliterUnit": "ミリリットル",
   "gramUnit": "グラム",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "個",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "名前順に並べ替え",
+  "sortByDateAdded": "追加日順に並べ替え",
+  "sortByCategory": "カテゴリ順に並べ替え",
+  "ascending": "昇順",
+  "descending": "降順",
   "alcohols": "アルコール",
   "medical": "医療",
   "readyMeals": "即席食品",
