--- a/shopping-list/src/locales/ko.json
+++ b/shopping-list/src/locales/ko.json
@@ -31,13 +31,18 @@
   "pieceUnit": "개",
   "kilogramUnit": "킬로그램",
   "literUnit": "리터",
-  "mililiterUnit": "밀리리터",
+  "milliliterUnit": "밀리리터",
   "gramUnit": "그램",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "개",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "이름순 정렬",
+  "sortByDateAdded": "추가 날짜순 정렬",
+  "sortByCategory": "카테고리순 정렬",
+  "ascending": "오름차순",
+  "descending": "내림차순",
   "alcohols": "주류",
   "medical": "의료",
   "readyMeals": "즉석식품",
