--- a/shopping-list/src/locales/no.json
+++ b/shopping-list/src/locales/no.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Stykke",
   "kilogramUnit": "Kilogram",
   "literUnit": "Liter",
-  "mililiterUnit": "Milliliter",
+  "milliliterUnit": "Milliliter",
   "gramUnit": "Gram",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "stk",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Sorter etter navn",
+  "sortByDateAdded": "Sorter etter dato lagt til",
+  "sortByCategory": "Sorter etter kategori",
+  "ascending": "Stigende",
+  "descending": "Synkende",
   "alcohols": "Alkohol",
   "medical": "Medisinsk",
   "readyMeals": "Ferdigretter",
