--- a/shopping-list/src/locales/pl.json
+++ b/shopping-list/src/locales/pl.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Sztuka",
   "kilogramUnit": "Kilogram",
   "literUnit": "Litr",
-  "mililiterUnit": "Mililitr",
+  "milliliterUnit": "Mililitr",
   "gramUnit": "Gram",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "szt",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Sortuj według nazwy",
+  "sortByDateAdded": "Sortuj według daty dodania",
+  "sortByCategory": "Sortuj według kategorii",
+  "ascending": "Rosnąco",
+  "descending": "Malejąco",
   "alcohols": "Alkohole",
   "medical": "Medyczne",
   "readyMeals": "Gotowe posiłki",
