--- a/shopping-list/src/locales/pt.json
+++ b/shopping-list/src/locales/pt.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Peça",
   "kilogramUnit": "Quilograma",
   "literUnit": "Litro",
-  "mililiterUnit": "Mililitro",
+  "milliliterUnit": "Mililitro",
   "gramUnit": "Grama",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "un",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Ordenar por nome",
+  "sortByDateAdded": "Ordenar por data de adição",
+  "sortByCategory": "Ordenar por categoria",
+  "ascending": "Ascendente",
+  "descending": "Descendente",
   "alcohols": "Bebidas alcoólicas",
   "medical": "Medicamentos",
   "readyMeals": "Refeições prontas",
