--- a/shopping-list/src/locales/nl.json
+++ b/shopping-list/src/locales/nl.json
@@ -31,13 +31,18 @@
   "pieceUnit": "Stuk",
   "kilogramUnit": "Kilogram",
   "literUnit": "Liter",
-  "mililiterUnit": "Milliliter",
+  "milliliterUnit": "Milliliter",
   "gramUnit": "Gram",
   "kgShortUnit": "kg",
   "lShortUnit": "l",
   "pcsShortUnit": "st",
   "mlShortUnit": "ml",
   "gShortUnit": "g",
+  "sortByName": "Sorteren op naam",
+  "sortByDateAdded": "Sorteren op datum toegevoegd",
+  "sortByCategory": "Sorteren op categorie",
+  "ascending": "Oplopend",
+  "descending": "Aflopend",
   "alcohols": "Alcohol",
   "medical": "Medisch",
   "readyMeals": "Kant-en-klaarmaaltijden",
