--- a/shopping-list/src/locales/it.json
+++ b/shopping-list/src/locales/it.json
@@ -24,6 +24,7 @@
   "rename": "Rinomina",
   "products": "Prodotti",
   "notificationsPanelTitle": "Pannello notifiche",
+  "noNotificationsMessage": "Nessuna notifica",
   "invite": "Invita",
   "inviteFriend": "Invita amici",
   "shareListDescription": "Per condividere la lista <0>{{listName}}</0> con un amico, inserisci il suo indirizzo email qui sotto.",
