--- a/shopping-list/src/locales/no.json
+++ b/shopping-list/src/locales/no.json
@@ -24,6 +24,7 @@
   "rename": "Gi nytt navn",
   "products": "Produkter",
   "notificationsPanelTitle": "Varslingspanel",
+  "noNotificationsMessage": "Ingen varsler",
   "invite": "Inviter",
   "inviteFriend": "Inviter venner",
   "shareListDescription": "For å dele listen <0>{{listName}}</0> med en venn, skriv inn e-postadressen deres nedenfor.",
