--- a/shopping-list/src/locales/sv.json
+++ b/shopping-list/src/locales/sv.json
@@ -24,6 +24,7 @@
   "rename": "Byt namn",
   "products": "Produkter",
   "notificationsPanelTitle": "Meddelanden",
+  "noNotificationsMessage": "Inga meddelanden",
   "invite": "Bjud in",
   "inviteFriend": "Bjud in vän",
   "shareListDescription": "För att dela listan <0>{{listName}}</0> med en vän, ange deras e-postadress nedan.",
